<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_food"
            android:icon="@drawable/ic_food"
            android:title="@string/food"/>

        <item android:id="@+id/nav_drink"
            android:icon="@drawable/ic_drink"
            android:title="@string/drinks"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item android:id="@+id/nav_contact"
                android:icon="@drawable/ic_contact"
                android:title="@string/contact_us"/>

            <item android:id="@+id/nav_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about_us"/>
        </menu>
    </item>

</menu>